// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <InputEnd />,
    }
  }
  disabled={false}
  error={false}
  fullWidth={true}
  id=""
  margin="normal"
  multiline={false}
  onChange={[Function]}
  required={false}
  rows={1}
  select={false}
  type="text"
/>
`;

exports[`renders disabled 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <InputEnd />,
    }
  }
  disabled={true}
  error={false}
  fullWidth={true}
  id=""
  margin="normal"
  multiline={false}
  onChange={[Function]}
  required={false}
  rows={1}
  select={false}
  type="text"
/>
`;
